--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</ul>
 		<div class="banner-text-posi-w3ls">
 			<div class="banner-text-whtree">
-				<h3 class="text-capitalize text-white text-center p-4">With Mantak Chia in San Francisco
+				<h3 class="text-capitalize text-white text-center p-4">With Master Mantak Chia in San Francisco
 				</h3>
-				<h4 class="px-4 py-3 text-center text-white mx-auto">May 31-June 6, 2019.
-					Three workshops and one seminar.</h4>
+				<h4 class="px-4 py-3 text-center text-white mx-auto">June 17-22, 2020.
+					Crowne Plaza Hotel, Foster City.</h4>
 			</div>
 		</div>
 	</div>
@@ -128,18 +128,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
-					<i class="fas fa-dot-circle"></i>
-					<h3 class="mb-3 mt-3"><a href="#seminar">INTRODUCTION SEMINAR</a></h3>
-					<p>Fri May 31, 2019</p>
-					<p>7:00-9:00pm</p>
+					<i class="fas fa-star"></i>
+					<h3 class="mb-3 mt-3"><a href="#basics">AWAKENING THE HEALING LIGHT
+            OF THE TAO, BACK TO THE BODY'S WISDOM</a></h3>
+          <p>Wed Jun 17-Thu Jun 18, 2020</p>
+					<p>9:30am-5:00pm</p>
 				</div>
 			</div>
 			<div class="col-md-6 agile-info_packages_left2">
 				<div class="new_top text-center">
-					<i class="fas fa-star"></i>
-					<h3 class="mb-3 mt-3"><a href="#basics">AWAKENING THE HEALING LIGHT
-					OF THE TAO, BACK TO THE BODY'S WISDOM</a></h3>
-					<p>Sat Jun 1-Sun Jun 2, 2019</p>
+					<i class="fas fa-heart"></i>
+					<h3 class="mb-3 mt-3"><a href="#healing-love">LOVING ENERGY THAT HEALS</a></h3>
+					<p>Fri Jun 19-Sat Jun 20, 2020</p>
 					<p>9:30am-5:00pm</p>
 				</div>
 			</div>
@@ -147,18 +147,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
-					<i class="fas fa-heart"></i>
-					<h3 class="mb-3 mt-3"><a href="#healing-love">LOVING ENERGY THAT HEALS</a></h3>
-					<p>Mon Jun 3-Tue Jun 4, 2019</p>
-					<p>9:30am-5:00pm</p>
-				</div>
-			</div>
-			<div class="col-md-6 agile-info_packages_left2">
-				<div class="new_top text-center">
-					<i class="fas fa-sync-alt"></i>
-					<h3 class="mb-3 mt-3">
-					<a href="#fusion">FUSION OF FIVE ELEMENTS & BRAIN WISDOM</a></h3>
-					<p>Wed Jun 5-Thu Jun 6, 2019</p>
+					<i class="fas fa-dot-circle"></i>
+					<h3 class="mb-3 mt-3"><a href="#iron-shirt">IRON SHIRT I</a></h3>
+					<p>Sun Jun 21-Mon Jun 22, 2020</p>
 					<p>9:30am-5:00pm</p>
 				</div>
 			</div>
@@ -166,133 +157,87 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 </section>
 
-<section id="seminar" class="choose py-5">
+<section id="basics" class="choose py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
-			<h3 class="w3l_header text-white">Introduction <span class="text-white">Seminar</span></h3>
+			<h3 class="w3l_header text-white">
+          Awakening <span class="text-white">the Healing Light of the Tao, Back to the Body's Wisdom</span>
+        </h3>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="choose_top text-center">
 <p>
-If you are interested in developing a balanced body and mind;
-if you desire to transform your negative/restless emotions into
-positive energy accompanied by a sense of quiet peace;
-or, if you wish to harness and control your sexual desire and power in order
-to cultivate a vibrant and radiant energy flow, then this seminar is for you.
-Take this opportunity to explore what the world-renowned master
-can offer you through guided meditation practices.
-Allow him to introduce you to the Taoist meditation that will profoundly
-transform your mind and body by following a balanced regimen of
-psychological and physiological exercises.
-These truths are what you will discover within yourself while attending
-the three workshops with the master.
+Master Chia will first help you activate your Qi centers and open up
+your Qi Channels with the introducing of the violet-light energy in
+this workshop. Then he will teach fundamental practices of Taoist
+meditation and guide you through each step.
+These exercises help you activate the internal flow of your life energy
+and open up your microcosmic orbit. This inner energy flow radiates and
+generates healing power inside your body.
+Afterward, he will lead you back to your body's wisdom,
+which is activated and developed by Inner Smile--smiling to your
+organs in cycles. This natural wisdom will make your organs healthy
+and strong while growing your soul spirit.
+Also, he will teach the Six Healing Sounds, which is the emotional wisdom
+that gives you control of your emotions that would otherwise
+be difficult to manage.
+</p>
+   </div>
+		</div>
+	</div>
+</section>
+
+<section id="healing-love" class="packages py-5">
+		<div class="container py-md-4 mt-md-3">
+			<div class="wthree_head_section">
+				<h3 class="w3l_header">
+            Loving <span>Energy that Heals</span>
+        </h3>
+			</div>
+			<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
+					<div class="row choose_top text-center">
+<p>
+Mantak Chia has been famous for teaching Healing Love for decades since the 1970s.
+Take this opportunity to learn these practices that were once mysterious from
+the legendary master, face-to-face.
+Love-making or sexual desire and behavior generates tremendous life energy,
+which ordinary people have no way to control.
+He will teach you how to manage your sexual power and transform it into
+the incredible healing force that flows through your body and opens up your
+sensory nerves and Qi channels.
+In this workshop, he will guide you through the process of balancing
+Yin and Yang, ranging from connecting the sexual power with universal human
+love to harnessing sexual energy from both males and females.
 </p>
 			</div>
 		</div>
 	</div>
 </section>
 
-<!-- //services -->
-	<!-- choose -->
-<!-- <section id="basics" class="choose py-5">
-	<div class="container py-md-4 mt-md-3">
-		<div class="wthree_head_section">
-			<h3 class="w3l_header text-white">Awakening <span class="text-white">the Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
-		</div>
-		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-			<div class="choose_top text-center"> -->
-<section id="basics" class="packages py-5">
+<section id="iron-shirt" class="testimonials py-5">
 		<div class="container py-md-4 mt-md-3">
 			<div class="wthree_head_section">
-				<h3 class="w3l_header">Awakening <span>the Healing Light of the Tao, Back to the Body's Wisdom</span></h3>
-			</div>
-			<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-					<div class="row choose_top text-center">
-
-<p>In this workshop, Master Chia will teach fundamental practices of Taoist meditation.
-He will guide you through each step and help you activate the internal flow of
-your life energy, opening up your microcosmic orbit
-(this inner energy flow radiates and generates healing power inside your body).
-Afterward, he will lead you back to your body's wisdom which is activated
-and developed by Inner Smile -- smiling to your organs in the creating cycle.
-This natural wisdom will make your organs healthy and strong while growing your
-soul spirit.
-In addition, he will teach the Six Healing Sounds, which is the emotional wisdom
-that gives you control of your emotions which would otherwise be difficult
-to manage.</p>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- //choose -->
-<!-- packages -->
-<!-- <section id="healing-love" class="packages py-5">
-	<div class="container py-md-4 mt-md-3">
-		<div class="wthree_head_section">
-			<h3 class="w3l_header">Loving <span>Energy that Heals</span></h3>
-		</div> -->
-<section id="healing-love" class="testimonials py-5">
-		<div class="container py-md-4 mt-md-3">
-			<div class="wthree_head_section">
-				<h3 class="w3l_header text-white">Loving <span class="text-white">Energy that Heals</span></h3>
+				<h3 class="w3l_header text-white">
+          Iron <span  class="text-white">Shirt I</span></h3>
 			</div>
 
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 				<div class="row choose_top text-center">
-<p>Mantak Chia has been famous for teaching Healing Love for decades
-since the 1970s.
-Take this opportunity to learn these practices that were once mysterious from
-the legendary master,  face-to-face.
-Love-making or sexual desire and behavior generates tremendous life energy,
-which ordinary people have no way to control.
-He will teach you how to manage your sexual power and transform it into
-incredible healing energy that flows through your body and opens up your
-sensory nerves and Qi channels.
-In this workshop, he will guide you through the process of balancing
-Yin and Yang, ranging from connecting the sexual power with universal human
-love to harnessing sexual energy from both male and female.</p>
+<p>
+Iron Shirt, Part I, includes a series of breathing and standing meditation
+practices, and they strengthen and move Qi into connective tissues,
+ligaments, joints, tendons, and bones. Dynamic standing postures
+not only incorporate breathing techniques that pack Qi around vital organs
+to enhance them but also provide grounding methods that result in
+firm rooting needed for higher spiritual ascension. These practices
+align and strengthen the body and bone structure. Further, they improve
+the immune system by increasing the power of the guardian Qi.
+Finally, they pave the way of perfecting our inner selves, allowing
+us to reach higher spiritual levels. In history, Iron Shirt was once
+the secret teaching to build the "steel shield" that prevents body injuries.
+</p>
 				</div>
 		</div>
-	</div>
-</section>
-<!-- //packages -->
-<section id="fusion" class="packages py-5">
-	<div class="container py-md-4 mt-md-3">
-		<div class="wthree_head_section">
-			<h3 class="w3l_header">Fusion of <span>Five Elements & Brain Wisdom</span></h3>
-		</div>
-		<!-- <div class="row about-tp mt-md-5 pt-4"> -->
-		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-			<!-- <div class="col-lg-6 welcome-left"> -->
-			<div class="col-md-6 agile-info_packages_left1 choose_top_nobox">
-			<!-- <div class="choose_top"> -->
-				<p>
-After more than four days of practice with Master Chia, your energy centers
-will be vibrating, and your energy channels will be much more open.
-Now, will be the perfect time for advanced meditation, where you will fuse
-all types of energy, both inside and out of your body, and use them to
-activate your brain.
-Fusion of Five Elements is one of the best Taoist practices that balance
-all essential energies in your body, dissolving both psychological conflicts
-and physiological imbalance. It brings all types of internal energy into
-harmonious focus and prepares for advanced Qi cultivation and transformation.
-Also, he will teach you to use this balanced power to awaken the wisdom
-of your brain, which is the result of seemingly intuitive brain activities,
-not normally the outcome of conventional brain thinking.</p>
-			</div>
-			<div class="col-md-6 agile-info_packages_left2">
-				<div class="new_top_nobox text-center">
-			<!-- <div class="col-lg-6 welcome-right">
-				<div class="welcome-right-top"> -->
-					<img src="images/EnergyTao.jpg" alt="" class="img-fluid" width="75%">
-				</div>
-			</div>
-		<!-- <div class="col-lg-6 welcome-right">
-				<div class="welcome-right-top">
-					<img src="images/EnergyTao.jpg" alt="" class="img-fluid">
-				</div>
-			</div> -->
-	</div>
 	</div>
 </section>
 
