Update to online workshops.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
-	<meta name="keywords" content="Mantak Chia, Healing Love, Healing Tao, Fusion of Five Elements, Darkroom Retreat"
+	<meta name="keywords" content="Mantak Chia, Healing Love, Healing Tao"
 	/>
 	<script>
 		addEventListener("load", function () {
@@ -111,10 +111,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</ul>
 		<div class="banner-text-posi-w3ls">
 			<div class="banner-text-whtree">
-				<h3 class="text-capitalize text-white text-center p-4">With Master Mantak Chia in San Francisco
-				</h3>
-				<h4 class="px-4 py-3 text-center text-white mx-auto">June 17-22, 2020.
-					Crowne Plaza Hotel, Foster City.</h4>
+				<h3 class="text-capitalize text-white text-center p-4">Live Meditation with Master Mantak Chia Online
+        </h3>
+				<h4 class="px-4 py-3 text-center text-white mx-auto">May 2-7, May 9-11, 2020.
+				</h4>
 			</div>
 		</div>
 	</div>
@@ -123,45 +123,65 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <section class="services py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
-			<h2 class="w3l_header"><span>Workshops</span></h2>
+			<h2 class="w3l_header"><span>Rich Contents</span></h2>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
 					<i class="fas fa-star"></i>
-					<h3 class="mb-3 mt-3"><a href="#basics">AWAKENING THE HEALING LIGHT
-            OF THE TAO, BACK TO THE BODY'S WISDOM</a></h3>
-          <p>Wed Jun 17-Thu Jun 18, 2020</p>
-					<p>9:30am-5:00pm</p>
+					<h3 class="mb-3 mt-3"><a href="#basics">AWAKENING THE LIGHT
+            OF HEALING &amp; WISDOM</a></h3>
+          <p>Sat May 2-Sun May 3, 2020</p>
+					<p>2-7pm (PDT) with one hour break</p>
 				</div>
 			</div>
 			<div class="col-md-6 agile-info_packages_left2">
 				<div class="new_top text-center">
 					<i class="fas fa-heart"></i>
-					<h3 class="mb-3 mt-3"><a href="#healing-love">LOVING ENERGY THAT HEALS</a></h3>
-					<p>Fri Jun 19-Sat Jun 20, 2020</p>
-					<p>9:30am-5:00pm</p>
+					<h3 class="mb-3 mt-3"><a href="#healing-love">LOVING ENERGY THAT HEALS
+            --TRANSFORM SEXUAL ENERGY INTO LIFE FORCE</a></h3>
+					<p>Mon May 4-Tue May 5, 2020</p>
+					<p>2-7pm (PDT) with one hour break</p>
 				</div>
 			</div>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
-					<i class="fas fa-dot-circle"></i>
-					<h3 class="mb-3 mt-3"><a href="#iron-shirt">IRON SHIRT I</a></h3>
-					<p>Sun Jun 21-Mon Jun 22, 2020</p>
-					<p>9:30am-5:00pm</p>
+					<i class="fas fa-sync-alt"></i>
+					<h3 class="mb-3 mt-3"><a href="#fusion1">FUSION OF THE FIVE ELEMENTS 1</a></h3>
+					<p>Wed May 6-Thu May 7, 2020</p>
+					<p>2-7pm (PDT) with one hour break</p>
+				</div>
+			</div>
+      <div class="col-md-6 agile-info_packages_left2">
+        <div class="new_top text-center">
+          <i class="fas fa-sync-alt"></i>
+					<h3 class="mb-3 mt-3"><a href="#fusion1">FUSION OF THE FIVE ELEMENTS 2 &amp; 3</a></h3>
+          <p>Sat May 9-Sun May 10, 2020</p>
+          <p>2-7pm (PDT) with one hour break</p>
+        </div>
+      </div>
+    </div>
+    <div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
+			<div class="col-md-6 agile-info_packages_left1">
+				<div class="new_top text-center">
+					<i class="fas fa-eye"></i>
+					<h3 class="mb-3 mt-3"><a href="#wisdom">WISDOM QI GONG</a></h3>
+					<p>Mon May 11, 2020</p>
+					<p>2-7pm (PDT) with one hour break</p>
 				</div>
 			</div>
 		</div>
-	</div>
+
+  </div>
 </section>
 
 <section id="basics" class="choose py-5">
 	<div class="container py-md-4 mt-md-3">
 		<div class="wthree_head_section">
 			<h3 class="w3l_header text-white">
-          Awakening <span class="text-white">the Healing Light of the Tao, Back to the Body's Wisdom</span>
+          Awakening <span class="text-white">the Light of Healing &amp; Wisdom</span>
         </h3>
 		</div>
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
@@ -182,6 +202,23 @@ Also, he will teach the Six Healing Sounds, which is the emotional wisdom
 that gives you control of your emotions that would otherwise
 be difficult to manage.
 </p>
+<br>
+<p class="text-left">
+  You will learn to<br>
+      • Transform stress into vitality.<br>
+      • Strengthen your immune system.<br>
+      • Open your energy channels.<br>
+      • Develop healing power through primordial qi gong.<br>
+      No Prerequisites.
+  </p>
+<!--
+<p class="text-left">More specifically, you will learn:</p>
+<ul class="text-left">
+  <li>
+    Manage Your Emotions ~ Release &amp; Recycle Negative Energy
+  </li>
+</ul>
+-->
    </div>
 		</div>
 	</div>
@@ -191,11 +228,11 @@ be difficult to manage.
 		<div class="container py-md-4 mt-md-3">
 			<div class="wthree_head_section">
 				<h3 class="w3l_header">
-            Loving <span>Energy that Heals</span>
+          <span>Loving Energy that Heals--Transform Sexual Energy into Life Force</span>
         </h3>
 			</div>
 			<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-					<div class="row choose_top text-center">
+					<div class="choose_top text-center">
 <p>
 Mantak Chia has been famous for teaching Healing Love for decades since the 1970s.
 Take this opportunity to learn these practices that were once mysterious from
@@ -209,36 +246,108 @@ In this workshop, he will guide you through the process of balancing
 Yin and Yang, ranging from connecting the sexual power with universal human
 love to harnessing sexual energy from both males and females.
 </p>
+<br>
+<p class="text-left">
+  You will learn about<br>
+      • Transforming sexual energy to strengthen your body, mind &amp; spirit.<br>
+      • Becoming a multi-orgasmic man or woman.<br>
+      • Sexual reflexology.<br>
+      • Solo cultivation.<br>
+      • Dual cultivation/harmonious love-making.<br>
+      • The many types of orgasm for women &amp; men.<br>
+      • Harmony of Yin &amp; Yang / Combing the energies of sex &amp; love.<br>
+      • Ways to increase your creative power &amp; wisdom.<br>
+      • Taoist techniques for sexual healing.<br>
+      </p>
 			</div>
 		</div>
 	</div>
 </section>
 
-<section id="iron-shirt" class="testimonials py-5">
+<section id="fusion1" class="testimonials py-5">
 		<div class="container py-md-4 mt-md-3">
 			<div class="wthree_head_section">
 				<h3 class="w3l_header text-white">
-          Iron <span  class="text-white">Shirt I</span></h3>
+          Fusion <span  class="text-white">of the Five Elements</span></h3>
 			</div>
 
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
-				<div class="row choose_top text-center">
+				<div class="choose_top text-center">
 <p>
-Iron Shirt, Part I, includes a series of breathing and standing meditation
-practices, and they strengthen and move Qi into connective tissues,
-ligaments, joints, tendons, and bones. Dynamic standing postures
-not only incorporate breathing techniques that pack Qi around vital organs
-to enhance them but also provide grounding methods that result in
-firm rooting needed for higher spiritual ascension. These practices
-align and strengthen the body and bone structure. Further, they improve
-the immune system by increasing the power of the guardian Qi.
-Finally, they pave the way of perfecting our inner selves, allowing
-us to reach higher spiritual levels. In history, Iron Shirt was once
-the secret teaching to build the "steel shield" that prevents body injuries.
+  After four days of practice with Master Chia, your energy centers
+  will be vibrating, and your energy channels will be much more open.
+  Now, will be the perfect time for advanced meditation, where you will fuse
+  all types of energy, both inside and out of your body.
+  Fusion of Five Elements is one of the best Taoist practices that balance
+  all essential energies in your body, dissolving both psychological conflicts
+  and physiological imbalance. It brings all types of internal energy into
+  harmonious focus and prepares for advanced Qi cultivation and transformation.
+  This is an essential practice for emotional balance in these challenging times.
 </p>
-				</div>
+<br>
+<p class="text-left">
+In Fusion 1, You will learn to<br>
+• Go deeper into negative emotional energies in your organs.<br>
+• Understand your internal weather patterns.<br>
+• Link your sense organs with their "mother" organs.<br>
+• Neutralize the negative emotions.<br>
+• Crystalize your emotional energy into a "pearl."<br>
+• Circulate energy and attract more healing energy from high-frequency sources.<br>
+Prerequisite: Awaken the Light of Healing or equivalent
+</p>
+<br>
+<p class="text-left">
+In Fusion 2 &amp; 3, You will learn to<br>
+• Create the pearl of compassion.<br>
+• Open the remaining extraordinary vessels that irrigate and regulate the body's energy:
+  Thrusting, Belt, and Bridge and Regulator Channels.<br>
+• Create powerful psychic self-protection methods.<br>
+• Prevent burnout.<br>
+• Protect the nervous system, spine, &amp; brain<br>
+• Safeguard your auric field.<br>
+Prerequisite: Fusion 1
+</p>
+<br>
+<p class="text-left">
+With the compassion that we develop, we can open up deeper
+channels in the body and prepare ourselves energetically for further
+spiritual and alchemical practices such as the Darkroom Experience.
+These meditation practices can strengthen us on all levels.
+</p>
+</div>
 		</div>
 	</div>
+</section>
+
+<section id="wisdom" class="packages py-5">
+  <div class="container py-md-4 mt-md-3">
+    <div class="wthree_head_section">
+      <h3 class="w3l_header">
+        <span>Wisdom Qi Gong</span>
+      </h3>
+    </div>
+    <div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
+        <div class="choose_top text-center">
+<p>
+In this information era, we read a lot of news and think about numerous
+other things. Our brain is overwhelmed by this unbearable amount of
+information. Brain fog and distracted minds not only affect us personally
+but also others with whom we come in contact. Wisdom Qi Gong practices
+can help increase and maintain mental awareness, memory, and clarity.
+</p>
+<br>
+<p class="text-left">
+You will learn to<br>
+    • Use life force energy (qi) to revitalize your brain.<br>
+    • Repair misfunctions.<br>
+    • Expand capacity.<br>
+    • Synchronize the left and right brain by activating and tapping into the body’s energetic potentials.<br>
+    • Avoid mental exhaustion and cultivate wisdom.<br>
+  No Prerequisites.
+</p>
+    </div>
+  </div>
+</div>
 </section>
 
 <section id="contactus" class="packages py-5">
