--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="banner-w3ls-1">
 				</div>
 			</li>
+			<!--
 			<li>
 				<div class="banner-w3ls-2">
 				</div>
@@ -97,27 +98,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="banner-w3ls-4">
 				</div>
 			</li>
-			<!-- <li class="prev">
+        <li class="prev">
 				<div class="banner-w3ls-5">
 				</div>
 			</li> -->
 		</ul>
-		<ul class="pager">
+<!--
+    <ul class="pager">
 			<li data-index="0" class="active"></li>
-			<li data-index="1"></li>
+  		<li data-index="1"></li>
 			<li data-index="2"></li>
 			<li data-index="3"></li>
-			<!-- <li data-index="4"></li> -->
-		</ul>
+			<li data-index="4"></li>
+    </ul>
+-->
 		<div class="banner-text-posi-w3ls">
 			<div class="banner-text-whtree">
-				<h3 class="text-capitalize text-white text-center p-4">Live Meditation with Master Mantak Chia Online
-        </h3>
-				<h4 class="px-4 py-3 text-center text-white mx-auto">May 2-7, May 9-11, 2020.
-				</h4>
 			</div>
 		</div>
 	</div>
+
 	<!-- //banner -->
 	<!-- services -->
 <section class="services py-5">
@@ -139,7 +139,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="new_top text-center">
 					<i class="fas fa-heart"></i>
 					<h3 class="mb-3 mt-3"><a href="#healing-love">LOVING ENERGY THAT HEALS
-            --TRANSFORM SEXUAL ENERGY INTO LIFE FORCE</a></h3>
+            --TRANSFORMING SEXUAL ENERGY INTO LIFE FORCE</a></h3>
 					<p>Mon May 4-Tue May 5, 2020</p>
 					<p>2-7pm (PDT) with one hour break</p>
 				</div>
@@ -167,7 +167,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="col-md-6 agile-info_packages_left1">
 				<div class="new_top text-center">
 					<i class="fas fa-eye"></i>
-					<h3 class="mb-3 mt-3"><a href="#wisdom">WISDOM QI GONG</a></h3>
+					<h3 class="mb-3 mt-3"><a href="#wisdom">WISDOM CHI KUNG</a></h3>
 					<p>Mon May 11, 2020</p>
 					<p>2-7pm (PDT) with one hour break</p>
 				</div>
@@ -188,7 +188,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="choose_top text-center">
 <p>
 Master Chia will first help you activate your Qi centers and open up
-your Qi Channels with the introducing of the violet-light energy in
+your Qi Channels by introducing of the violet-light energy in
 this workshop. Then he will teach fundamental practices of Taoist
 meditation and guide you through each step.
 These exercises help you activate the internal flow of your life energy
@@ -208,7 +208,7 @@ be difficult to manage.
       • Transform stress into vitality.<br>
       • Strengthen your immune system.<br>
       • Open your energy channels.<br>
-      • Develop healing power through primordial qi gong.<br>
+      • Develop healing power through primordial Chi Kung.<br>
       No Prerequisites.
   </p>
 <!--
@@ -228,15 +228,15 @@ be difficult to manage.
 		<div class="container py-md-4 mt-md-3">
 			<div class="wthree_head_section">
 				<h3 class="w3l_header">
-          <span>Loving Energy that Heals--Transform Sexual Energy into Life Force</span>
+          <span>Loving Energy that Heals--Transforming Sexual Energy into Life Force</span>
         </h3>
 			</div>
 			<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
 					<div class="choose_top text-center">
 <p>
-Mantak Chia has been famous for teaching Healing Love for decades since the 1970s.
+Mantak Chia has been famous in the world for teaching Healing Love for decades since the 1970s.
 Take this opportunity to learn these practices that were once mysterious from
-the legendary master, face-to-face.
+the legendary master, live.
 Love-making or sexual desire and behavior generates tremendous life energy,
 which ordinary people have no way to control.
 He will teach you how to manage your sexual power and transform it into
@@ -268,7 +268,7 @@ love to harnessing sexual energy from both males and females.
 		<div class="container py-md-4 mt-md-3">
 			<div class="wthree_head_section">
 				<h3 class="w3l_header text-white">
-          Fusion <span  class="text-white">of the Five Elements</span></h3>
+          Fusion <span  class="text-white">of the Five Elements 1, 2, 3</span></h3>
 			</div>
 
 		<div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
@@ -278,7 +278,7 @@ love to harnessing sexual energy from both males and females.
   will be vibrating, and your energy channels will be much more open.
   Now, will be the perfect time for advanced meditation, where you will fuse
   all types of energy, both inside and out of your body.
-  Fusion of Five Elements is one of the best Taoist practices that balance
+  Fusion of the Five Elements is one of the best Taoist practices that balance
   all essential energies in your body, dissolving both psychological conflicts
   and physiological imbalance. It brings all types of internal energy into
   harmonious focus and prepares for advanced Qi cultivation and transformation.
@@ -323,7 +323,7 @@ These meditation practices can strengthen us on all levels.
   <div class="container py-md-4 mt-md-3">
     <div class="wthree_head_section">
       <h3 class="w3l_header">
-        <span>Wisdom Qi Gong</span>
+        <span>Wisdom Chi Kung</span>
       </h3>
     </div>
     <div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
@@ -332,15 +332,15 @@ These meditation practices can strengthen us on all levels.
 In this information era, we read a lot of news and think about numerous
 other things. Our brain is overwhelmed by this unbearable amount of
 information. Brain fog and distracted minds not only affect us personally
-but also others with whom we come in contact. Wisdom Qi Gong practices
+but also others with whom we come in contact. Wisdom Chi Kung practices
 can help increase and maintain mental awareness, memory, and clarity.
 </p>
 <br>
 <p class="text-left">
 You will learn to<br>
     • Use life force energy (qi) to revitalize your brain.<br>
-    • Repair misfunctions.<br>
-    • Expand capacity.<br>
+    • Repair functions.<br>
+    • Expand the capacity.<br>
     • Synchronize the left and right brain by activating and tapping into the body’s energetic potentials.<br>
     • Avoid mental exhaustion and cultivate wisdom.<br>
   No Prerequisites.
@@ -388,7 +388,7 @@ Hosted by <a href="mailto:sahinboydas@gmail.com">Sahin Boydas</a> and <a href="m
 				</ul>
 			</div>
 			<div class="copyrightbottom">
-				<p>© 2018 Inner Meditation
+				<p>© 2020 Inner Meditation
 				</p>
 			</div>
 			<div class="clearfix"></div>
@@ -401,9 +401,11 @@ Hosted by <a href="mailto:sahinboydas@gmail.com">Sahin Boydas</a> and <a href="m
 	<script src="js/jquery-2.2.3.min.js"></script>
 	<!-- Default-JavaScript-File -->
 	<!-- banner slider -->
-	<script src="js/slider.js"></script>
-	<!-- //banner slider -->
-				<script type="text/javascript">
+<!--	<script src="js/slider.js"></script>
+-->
+  <!-- //banner slider -->
+<!--
+      <script type="text/javascript">
 					$(window).load(function() {
 						$("#flexiselDemo1").flexisel({
 							visibleItems: 2,
@@ -430,7 +432,8 @@ Hosted by <a href="mailto:sahinboydas@gmail.com">Sahin Boydas</a> and <a href="m
 
 					});
 			</script>
-			<script type="text/javascript" src="js/jquery.flexisel.js"></script>
+-->
+      <script type="text/javascript" src="js/jquery.flexisel.js"></script>
 	<!-- //clients -->
 
 	<!-- Necessary-JavaScript-File-For-Bootstrap -->
@@ -441,14 +444,14 @@ Hosted by <a href="mailto:sahinboydas@gmail.com">Sahin Boydas</a> and <a href="m
 	<script src="js/move-top.js"></script>
 	<script src="js/easing.js"></script>
 	<script>
-		jQuery(document).ready(function ($) {
-			$(".scroll").click(function (event) {
-				event.preventDefault();
-				$('html,body').animate({
-					scrollTop: $(this.hash).offset().top
-				}, 1000);
-			});
-		});
+//		jQuery(document).ready(function ($) {
+//			$(".scroll").click(function (event) {
+//				event.preventDefault();
+//				$('html,body').animate({
+//					scrollTop: $(this.hash).offset().top
+//				}, 1000);
+//			});
+//		});
 	</script>
 	<!-- start-smoth-scrolling -->
 
