Add pricing information.

--- a/index.html
+++ b/index.html
@@ -350,6 +350,26 @@ You will learn to<br>
 </div>
 </section>
 
+<section id="price" class="packages py-5">
+  <div class="container py-md-4 mt-md-3">
+    <div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
+        <div class="choose_top text-left">
+<p>
+  Pricing:<br><br>
+  Full Seminar | 9 days: $575 per person<br>
+  Any 2-day workshop: $150 per person<br>
+  Two 2-Day workshops: $255<br>
+  Three 2 - Day workshops: $385<br>
+  1-day workshop<br>
+  Wisdom Chi Kung | 1 day: $75 per person<br>
+  <br>
+  Registration information is coming soon.
+</p>
+    </div>
+  </div>
+</div>
+</section>
+
 <section id="contactus" class="packages py-5">
 	<div class="container py-md-4 mt-md-3">
 <p>
