Update registration info.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</li> -->
 					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
-						<a class="nav-link" href="https://mantakchia.eventbrite.com">Tickets</a>
+						<a class="nav-link" href="#ticket">Tickets</a>
 					</li>
 					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
 						<a class="nav-link" href="#">Resources</a>
@@ -350,7 +350,7 @@ You will learn to<br>
 </div>
 </section>
 
-<section id="price" class="packages py-5">
+<section id="ticket" class="packages py-5">
   <div class="container py-md-4 mt-md-3">
     <div class="row inner_w3l_agile_grids-1 mt-md-5 pt-4">
         <div class="choose_top text-left">
@@ -363,7 +363,10 @@ You will learn to<br>
   1-day workshop<br>
   Wisdom Chi Kung | 1 day: $75 per person<br>
   <br>
-  Registration information is coming soon.
+  Please register by paying with PayPal to admin@svteknoloji.com, and note
+   the workshops you choose
+   (log in your PayPal account and go to Tools-> Send Money).
+   You must provide an email address to receive the Zoom video conference link.
 </p>
     </div>
   </div>
